2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Hopefully fix the assertion we are hitting by not forcing updating
        the state of scrollbars when setting the adjustments. This was
        leading to a premature layout.

        fast/dom/open-and-close-by-DOM.html
        fast/dom/Window/closure-access-after-navigation-window.html
        fast/harness/use-page-cache.html

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments):

2009-12-20  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Darin Adler.

        Web Inspector: Constrain the number of messages the inspector shows.

        https://bugs.webkit.org/show_bug.cgi?id=20919

        * English.lproj/localizedStrings.js:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController):
        (WebCore::InspectorController::addConsoleMessage):
        (WebCore::InspectorController::clearConsoleMessages):
        (WebCore::InspectorController::populateScriptObjects):
        * inspector/InspectorController.h:
        * inspector/InspectorFrontend.cpp:
        (WebCore::InspectorFrontend::updateConsoleMessageExpiredCount):
        * inspector/InspectorFrontend.h:
        * inspector/front-end/inspector.js:
        (WebInspector.updateConsoleMessageExpiredCount):

2009-12-20  Andrei Popescu  <andreip@google.com>

        Reviewed by Adam Barth.

        [Android] Android needs implementation of setCookies, cookies and cookiesEnabled functions.
        https://bugs.webkit.org/show_bug.cgi?id=32559

        Add implementation of the cookie functions.
        Fix a crash caused by dereferencing a 0 MainResourceLoader pointer
        in ResourceHandle::start().

        No new tests, this is platform code.

        * platform/android/PlatformBridge.h:
        * platform/network/android/AuthenticationChallenge.h: Added.